[package]
name = "cheatercock"
version = "0.1.0"
edition = "2021"
default-run = "cheatercock"

[[bin]]
name = "logic"
path = "src/bin/logic.rs"

[dependencies]
rdev = "0.5"
arboard = "3"
anyhow = "1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eframe = "0.27.2"
egui_extras = { version = "0.27.2", features = ["image"] }
rand = "0.8.5"
once_cell = "1.18"